force-app/main/default/objects/Currency__c/Currency__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls Currency related settings</description>
    <label>Currency</label>
</CustomObject>