force-app/main/default/objects/Currency__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <defaultValue>&quot;ILS&quot;</defaultValue>
    <description>Hold the current implementation basic currency - the currency that the rates in the Exchange_Rate__c object refer to</description>
    <label>Base Currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>