force-app/main/default/objects/Currency__c/fields/Currency_Manager__c.field-meta.xml
<CustomField>
    <fullName>Currency_Manager__c</fullName>
    <label>Currency Manager</label>
    <type>Email</type>
</CustomField>