force-app/main/default/objects/Currency__c/fields/Current_Exchange_Rate_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Exchange_Rate_Source_URL__c</fullName>
    <defaultValue>&quot;http://www.bankisrael.gov.il/currency.xml&quot;</defaultValue>
    <label>Current Exchange Rate Source URL</label>
    <type>Url</type>
</CustomField>