force-app/main/default/objects/Currency__c/fields/Minutes_for_Daily_Update_Retry__c.field-meta.xml
<CustomField>
    <fullName>Minutes_for_Daily_Update_Retry__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Minutes for Daily Update Retry</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>