force-app/main/default/objects/Currency__c/fields/Number_of_Daily_Update_Retries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Daily_Update_Retries__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Number of Daily Update Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>